--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "private": "true",
   "dependencies": {
     "@hotwired/stimulus": "^3.1.0",
+    "@hotwired/stimulus-webpack-helpers": "^1.0.1",
     "@hotwired/turbo-rails": "^7.2.4",
     "@popperjs/core": "^2.11.6",
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.2.2",
+    "star-rating.js": "^4.3.0",
+    "tom-select": "^2.2.2",
+    "typed.js": "^2.0.12",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
